--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,31 +1,18 @@
 //============= GLOBAL VERSIONS =================
 def versions = [:]
-versions.kotlin = "1.3.61"
-
-//============= PLUGINS ======================
-ext.plgns = [:]
-versions.android_gradle = "3.4.2"
-versions.google_services = "4.3.3"
-
-plgns.android_gradle = "com.android.tools.build:gradle:$versions.android_gradle"
-plgns.kotlin_gradle = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
-plgns.google_services = "com.google.gms:google-services:$versions.google_services"
-plgns.crashlytics = "com.google.firebase:firebase-crashlytics-gradle:$versions.crashlytics"
 
 //============= COMPILE AND RUNTIME DEPENDENCIES =================
 ext.deps = [:]
 
 def android = [:]
-versions.androidx = "1.0.0"
-versions.constraint_layout = "2.0.0-alpha3"
-versions.lifecycle = "2.0.0"
-versions.liveevent = "1.0.1"
+versions.material = "1.6.1"
+versions.constraint_layout = "2.1.4"
+versions.live_event = "1.3.0"
 versions.multidex = "1.0.3"
 
-android.kotlin_stdlib = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
-android.appcompat = "androidx.appcompat:appcompat:$versions.androidx"
-android.material = "com.google.android.material:material:$versions.androidx"
+android.material = "com.google.android.material:material:$versions.material"
 android.constraint_layout = "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
+android.live_event = "com.github.hadilq:live-event:$versions.live_event"
 deps.android = android
 
 def koin = [:]
