--- a/modules_application/presentation/build.gradle
+++ b/modules_application/presentation/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -32,13 +34,13 @@ android {
 dependencies {
     implementation project(':domain')
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation deps.android.material
+    implementation deps.android.constraint_layout
 
     implementation deps.koin.android
 
     implementation deps.reactivex.rx_kotlin
     implementation deps.reactivex.rx_android
+
+    implementation deps.android.live_event
 }
