Replace LoadingLayout with SwipeRefreshLayout
(cherry picked from commit cee41d1515b57ecee09d276b3ed355f21e1e0bd4)

--- a/modules_application/presentation/build.gradle
+++ b/modules_application/presentation/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
     implementation deps.android.material
     implementation deps.android.constraint_layout
+    implementation deps.android.swiperefreshlayout
 
     implementation deps.koin.android
 
