--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,11 +7,13 @@ ext.deps = [:]
 def android = [:]
 versions.material = "1.6.1"
 versions.constraint_layout = "2.1.4"
+versions.swiperefreshlayout = "1.1.0"
 versions.live_event = "1.3.0"
 versions.multidex = "1.0.3"
 
 android.material = "com.google.android.material:material:$versions.material"
 android.constraint_layout = "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
+android.swiperefreshlayout = "androidx.swiperefreshlayout:swiperefreshlayout:$versions.swiperefreshlayout"
 android.live_event = "com.github.hadilq:live-event:$versions.live_event"
 deps.android = android
 
