Fix Glide warning
The warning was "Failed to find GeneratedAppGlideModule"

(cherry picked from commit 85c74d8b1d148465269a568dda5513a2471b3925)
(cherry picked from commit 9456f865ce5f9a0f287dd3bf181de89d6cecb659)

--- a/modules_application/presentation/build.gradle
+++ b/modules_application/presentation/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -46,5 +47,5 @@ dependencies {
     implementation deps.android.live_event
 
     implementation deps.glide.glide
-    implementation deps.glide.glide_compiler
+    kapt deps.glide.glide_compiler
 }
