Tidy up dependencies inherited between gradle modules
(cherry picked from commit df6b003e0dd7c1a10453238d75ef07bebdba9fa5)

--- a/modules_application/data/build.gradle
+++ b/modules_application/data/build.gradle
@@ -17,9 +17,9 @@ dependencies {
     implementation deps.squareup.jackson_converter
     implementation deps.squareup.logging_interceptor
 
-    implementation deps.koin.android
+    api deps.koin.android
 
-    implementation deps.reactivex.rx_kotlin
+    api deps.reactivex.rx_kotlin
 
     implementation deps.room.runtime
     implementation deps.room.rxjava3
