--- a/modules_application/domain/build.gradle
+++ b/modules_application/domain/build.gradle
@@ -11,10 +11,7 @@ android {
 dependencies {
     api project(':data')
 
-    implementation deps.koin.android
-
-    implementation deps.reactivex.rx_kotlin
-    implementation deps.reactivex.rx_android
+    api deps.reactivex.rx_android
 
     testImplementation tests.junit
     testImplementation tests.androidx_core_testing
