--- a/modules_application/data/build.gradle
+++ b/modules_application/data/build.gradle
@@ -13,15 +13,15 @@ android {
 
 dependencies {
     implementation deps.squareup.retrofit2
-    implementation deps.squareup.rxjava3_adapter
     implementation deps.squareup.jackson_converter
     implementation deps.squareup.logging_interceptor
 
     api deps.koin.android
 
-    api deps.reactivex.rx_kotlin
-
     implementation deps.room.runtime
-    implementation deps.room.rxjava3
+    implementation deps.room.ktx
     kapt deps.room.compiler
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
 }
